BUTTONS: Fix render issue on safari after hover states

--- a/source/styles/ui/_buttons.scss
+++ b/source/styles/ui/_buttons.scss
@@ -43,6 +43,7 @@
 			width: 53%;
 			top: -1%;
 			transition: width $BTN_HOVER_TRANSITION ease;
+			@include forceMatrix;
 		}
 
 		&:before {
